<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.johnnysc.mytaskmanager.crud.CRUDTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/spinner"
                android:text="@string/category_type"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/done_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/done"/>

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/done_check_box"
                android:gravity="right"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                tools:text="Created on 24.03.18 14:25:40"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_small">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/alarm_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm"/>

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/alarm_check_box"
                android:gravity="right"
                android:paddingLeft="@dimen/padding_small"
                android:text="@string/choose_date"/>
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/minimum"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/body_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/body"
            android:paddingBottom="@dimen/padding_medium"
            android:paddingTop="@dimen/padding_medium">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/body_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="minimum 5 symbols"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>
