<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_small">

    <LinearLayout
        android:id="@+id/data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/check_box"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:padding="@dimen/padding_small">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Title"/>

        <TextView
            android:id="@+id/body_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="Body"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/data_layout"
        android:layout_alignTop="@+id/data_layout"
        android:gravity="center_vertical"
        android:paddingRight="@dimen/padding_small"/>

</RelativeLayout>