<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:text="not important and not urgent"/>

    <Button
        android:padding="@dimen/padding_medium"
        android:id="@+id/add_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_text_view"
        android:layout_centerHorizontal="true"
        android:background="?attr/selectableItemBackground"
        android:text="@string/add"/>

</RelativeLayout>